--- a/.gitignore
+++ b/.gitignore
@@ -2,20 +2,19 @@
 
 # dependencies
 node_modules
-node_modules/
-/node_modules
-/.pnp
+node_modules
+.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage
 
 # next.js
-/.next/
-/out/
+.next
+out
 
 # production
-/build
+build
 
 # misc
 .DS_Store
