--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@mantine/notifications": "^3.6.9",
     "@mantine/prism": "^3.6.9",
     "@mantine/rte": "^3.6.9",
+    "@radix-ui/react-icons": "^1.0.3",
     "dayjs": "^1.10.7",
     "next": "12.1.0",
     "prism-react-renderer": "^1.2.1",
